syntax = "proto3";

message Event {
  int32 id = 1;
  string eventName = 2;
}

message ConnectionAcknowledge {
  bool connected = 1;
}

message MessageAck {
  string messageId = 1;
}

message StreamMessage {
  oneof messageType {
    Event event = 1;
    ConnectionAcknowledge connectionAck = 2;
    MessageAck messageAck = 3;
  }
}

service StreamService {
  rpc EventStreamingRPC(stream StreamMessage) returns (stream StreamMessage);
}
