syntax = "proto3";

message Message {
  int32 id = 1;
  string text = 2;
}

message ConnectionAcknowledge {
  bool connected = 1;
}

message MessageAck {
  string messageId = 1;
}

message StreamMessage {
  oneof messageType {
    Message message = 1;
    ConnectionAcknowledge connectionAck = 2;
    MessageAck messageAck = 3;
  }
}

service StreamService {
  rpc MessageStreamingRPC(stream StreamMessage) returns (stream StreamMessage);
}
