syntax = "proto3";

message Task {
  int32 id = 1;
  string taskName = 2;
}

message ConnectionAcknowledge {
  bool connected = 1;
}

message MessageAck {
  string messageId = 1;
}

message StreamMessage {
  oneof messageType {
    Task task = 1;
    ConnectionAcknowledge connectionAck = 2;
    MessageAck messageAck = 3;
  }
}

service StreamService {
  rpc TaskStreamingRPC(stream StreamMessage) returns (stream StreamMessage);
}
